objects/CampaignMember.object
<CustomObject>
    <sharingModel>ControlledByCampaign</sharingModel>
    <fields>
        <fullName>Is_MEL__c</fullName>
        <formula>If(HasResponded &amp;&amp; Not(IsBlank(LD_Response_Action__c)),true,false)</formula>
        <label>Is MEL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_MQL__c</fullName>
        <formula>Is_SAL__c || 



(Contains(Lower(LD_Routing_Status__c),&quot;growth&quot;) &amp;&amp; MK_Fit_Segment__c &lt;&gt; &quot;4. low&quot;)</formula>
        <label>Is MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SAL__c</fullName>
        <formula>LD_Routing_Status__c= &quot;Routed to Sales&quot; || Not(IsBlank(LD_Routed_to_Sales_Date__c))</formula>
        <label>Is SAL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRFG_MQL__c</fullName>
        <formula>/*IF( Contact.Id&lt;&gt;&quot;&quot;, Contact.demandramp_fg__DRFG_MQL__c, Lead.demandramp_fg__DRFG_MQL__c)*/

IF(
LEN(ContactId)&gt;0,
Contact.DRFG_MQL__c,
Lead.DRFG_MQL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DRFG_SAL__c</fullName>
        <formula>IF(
LEN(ContactId)&gt;0,
 Contact.DRFG_SAL__c ,
 Lead.DRFG_SQL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DRFG_SQL__c</fullName>
        <formula>IF(
LEN(ContactId)&gt;0,
 Contact.DRFG_SQL__c ,
 Lead.DRFG_SQL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region_C__c</fullName>
        <formula>IF(
   len(Contact.Region__c)=0,
   text(Lead.Region__c),
   Contact.Region__c
)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <formula>MAX( Contact.Account.Max_Employees__c,  Lead.Max_Account_Employees__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Company employee #</inlineHelpText>
        <label>Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_RM__c</fullName>
        <formula>If(IsBlank( LeadId ), ( Contact.Account.Renewal_Manager__r.Full_Name__c ) , ( Lead.LeanData__Reporting_Matched_Account__r.Renewal_Manager__r.Full_Name__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account RM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>If(IsBlank( LeadId ),   Text( Contact.Owner.Team__c)   ,  Text(Lead.Owner:User.Team__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_CSM__c</fullName>
        <formula>If(IsBlank( LeadId ), (Contact.Account.Success_Manager__r.Full_Name__c ) , ( Lead.LeanData__Reporting_Matched_Account__r.Success_Manager__r.Full_Name__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account CSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Funnel__c</fullName>
        <formula>TEXT(Lead.DRFG_Funnel__c) &amp; TEXT(Contact.DRFG_Funnel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funnel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Person__c</fullName>
        <formula>IF(
LEN(ContactId)&gt;0,
 Contact.DRFG_Person__c ,
 Lead.DRFG_Person__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LS_SAL_Date__c</fullName>
        <label>LS - SAL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LS_SQL_Date__c</fullName>
        <label>LS - SQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>If(
   IsBlank(
      LeadId
   ),
   Text(
      Contact.LeadSource
   ),
   Text(
      Lead.LeadSource
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LS-Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <formula>If(IsBlank( LeadId ),  Text( Contact.Stage_Outreach__c ) ,   Text( Lead.Status ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status-Current</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <formula>If(IsBlank( LeadId ),&quot;Contact&quot;,&quot;Lead&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns if campaign member is a Lead or a Contact (based on having LeadID )</inlineHelpText>
        <label>Member Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Engaged__c</fullName>
        <formula>IF(
LEN(ContactId)&gt;0,
 Contact.DRFG_Engaged__c ,
 Lead.DRFG_Engaged__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engaged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <formula>lower(Mid(Email,FIND(&quot;@&quot;, Email)+1,find(&quot;.&quot;, Email) - FIND(&quot;@&quot;, Email)- 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mid( Email, FIND(&quot;@&quot;, Email)+1 , FIND(&quot;@&quot;, Email)+len(Email) - find(&quot;.&quot;, Email))</inlineHelpText>
        <label>Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MK_Fit_Score__c</fullName>
        <formula>If(contains( CompanyOrAccount ,&quot;productboard&quot; ),null,

If( IsBlank( LeadId ),  Contact.mk_customer_fit_score__c    ,  Lead.mk_customer_fit_score__c  ))</formula>
        <inlineHelpText>MadKudu Fit Score from Lead/Contact</inlineHelpText>
        <label>MK Fit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MQL_Campaign__c</fullName>
        <formula>If(IsBlank( LeadId ), Contact.Latest_MQL_Campaign__r.Name , Lead.Latest_MQL_Campaign__r.Name )</formula>
        <label>MQL Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Log__c</fullName>
        <label>Workflow Log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <formula>If(IsBlank( LeadId ), Contact.LastActivityDate , Lead.LastActivityDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lead or Contact Last Activity Date</inlineHelpText>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <formula>If(IsBlank( LeadId ), Text( Contact.Status_Reason__c ) , Text( Lead.Status_Reason__c ))</formula>
        <label>Status Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MK_Fit_Segment__c</fullName>
        <formula>If(contains( CompanyOrAccount ,&quot;productboard&quot;),&quot;4. low&quot;,

Case(If(IsBlank( LeadId ),  Contact.mk_customer_fit_segment__c    ,  Lead.mk_customer_fit_segment__c  ),
&quot;very good&quot;, &quot;1. very good&quot;,
&quot;good&quot;,&quot;2. good&quot;,
&quot;medium&quot;,&quot;3. medium&quot;,
&quot;low&quot;,&quot;4. low&quot;,
&quot;&quot;))</formula>
        <inlineHelpText>Lead or Contact MadKudu Customer Fit Segment</inlineHelpText>
        <label>MK Fit Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Stage__c</fullName>
        <formula>If(IsBlank( LeadId ),  Text(Contact.Stage_Outreach__c ) ,   Text(Lead.Stage_Outreach__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outreach Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <formula>If(IsBlank( LeadId ), (Contact.Account_Customer_Status__c) , (Lead.LeanData__Reporting_Matched_Account__r.Customer_Status__c ) )</formula>
        <label>Customer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Person_Fit__c</fullName>
        <formula>IF(
LEN(ContactId)&gt;0,
 Contact.DRFG_Person_Fit__c ,
 Lead.DRFG_Person_Fit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person + Fit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LS_Replied_Date__c</fullName>
        <label>LS - Replied Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign__c</fullName>
        <formula>If(IsBlank( LeadId ),  Contact.Latest_Campaign__r.Name , Lead.Latest_Campaign__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Latest sales actionable campaign on Lead or Contact</inlineHelpText>
        <label>Latest Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <formula>If(IsBlank( LeadId ),   Text(Contact.Account.Sales_territory__c)   ,  Text(Lead.Sales_territory__c)  )</formula>
        <inlineHelpText>Lead or Contact Sales Territory</inlineHelpText>
        <label>Sales Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Engaged_Fit__c</fullName>
        <formula>IF(
LEN(ContactId)&gt;0,
 Contact.DRFG_Engaged_Fit__c ,
 Lead.DRFG_Engaged_Fit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engaged + Fit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employee_Segment__c</fullName>
        <formula>If( IsBlank( LeadId ), Contact.Account.Suggested_Segmentation_employees__c ,  Lead.Employee_Segment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Employee # Segment from account or lead</inlineHelpText>
        <label>Employee # Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Level__c</fullName>
        <formula>value(left(LD_Response_Action__c,1))</formula>
        <inlineHelpText>1 (urgent), 2 or 3 depending on the member status</inlineHelpText>
        <label>Engagement Level</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Domain_Type__c</fullName>
        <formula>Case(  Email_Domain__c ,
&quot;hotmail&quot;,&quot;Personal&quot;,
&quot;yahoo&quot;,&quot;Personal&quot;,
&quot;gmail&quot;,&quot;Personal&quot;,
&quot;Work?&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Email domain type, only identified Gmail, hotmail &amp; yahoo</inlineHelpText>
        <label>Email Domain Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routed_to_Team__c</fullName>
        <inlineHelpText>This Lead/Contact was routed to the sales team</inlineHelpText>
        <label>LD Routed to Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routing_Status__c</fullName>
        <inlineHelpText>Indicates whether routing was initiated</inlineHelpText>
        <label>LD Routing Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_Contacted_Date__c</fullName>
        <label>LS - Contacted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LS_First_MQL_Date__c</fullName>
        <formula>If( 
IsBlank( 
LeadId 
), 
Contact.Lifecycle_Stage_MQL_Date__c, 
Lead.Lifecycle_Stage_MQL_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LS-First MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UTM_Original_Term__c</fullName>
        <description>The UTM Term field copied from Load/Contact entity on time when Campaign Member object creation.</description>
        <label>UTM Original Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Latest_Campaign__c</fullName>
        <formula>CampaignId =  Lead.Latest_Campaign__c ||  CampaignId =  Contact.Latest_Campaign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Latest Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LD_Response_Action__c</fullName>
        <description>case(text( Campaign.Type ),
&quot;Content&quot;,&quot;3-Content&quot;,
&quot;Form&quot;,IF(IsPickVal( Status ,&quot;Submitted&quot;),&quot;1-Form&quot;,&quot;3-Newsletter&quot;),
&quot;Webinar&quot;, IF(IsPickVal( Status ,&quot;Attended&quot;),&quot;2-Webinar&quot;,&quot;&quot;),
&quot;Demo Signup / Trial&quot;,&quot;&quot;,
&quot;Advertisement&quot;,&quot;&quot;,
If(Left(text( Status ),1) = &quot;1&quot; || Left(text( Status ),1) = &quot;2&quot;  || Left(text( Status ),1) = &quot;3&quot; ,
Text(Status) &amp; &quot;-&quot; &amp; Text(Campaign.Type ),&quot;&quot;))</description>
        <formula>IF(IsPickVal(Campaign.Type ,&quot;Demo Signup / Trial&quot;),&quot;&quot;,
IF(Left(text( Status ),1) = &quot;1&quot; || Left(text( Status ),1) = &quot;2&quot;  || Left(text( Status ),1) = &quot;3&quot;,
Text(Status) &amp; &quot;-&quot; &amp; Text(Campaign.Type ),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to determine when to route a record to sales</inlineHelpText>
        <label>LD Response Action-Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routed_to_Owner__c</fullName>
        <inlineHelpText>This Lead/contact was routed to the sales team member</inlineHelpText>
        <label>LD Routed to Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Owner__c</fullName>
        <formula>If(IsBlank( LeadId ), Contact.Owner.FirstName + &quot; &quot; + Contact.Owner.LastName , Lead.Owner:User.FirstName + &quot; &quot; + Lead.Owner:User.LastName)</formula>
        <label>Lead/Contact Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Latest__c</fullName>
        <inlineHelpText>lease/Contact status stamped on campaign member as long as it is the latest campaign on for the record</inlineHelpText>
        <label>Lead Status - Latest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Behavior_Score__c</fullName>
        <formula>IF(
LEN(ContactId)&gt;0,
 Contact.DRFG_Behavior_Score__c ,
 Lead.DRFG_Behavior_Score__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Copy of the created date which isn&apos;t available in reports</inlineHelpText>
        <label>Member Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UTM_Original_Medium__c</fullName>
        <description>The UTM Medium field copied from Load/Contact entity on time when Campaign Member object creation.</description>
        <label>UTM Original Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Original_Source__c</fullName>
        <description>The UTM Source field copied from Load/Contact entity on time when Campaign Member object creation.</description>
        <label>UTM Original Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_Lead_Created_Date__c</fullName>
        <formula>If( 
   IsBlank( 
      LeadId 
   ), 
   Contact.CreatedDate,
   Lead.CreatedDate 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LS-Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign_Date__c</fullName>
        <formula>If(IsBlank( LeadId ),   Contact.Latest_Campaign_Date__c   , Lead.Latest_Campaign_Date__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Latest Sales Actionable Campaign Date</inlineHelpText>
        <label>Latest Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pipeline_Opportunity__c</fullName>
        <formula>IF(
LEN(ContactId)&gt;0,
 Contact.Pipeline_Opportunity__c ,
 Lead.Pipeline_Opportunity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Opportunity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Routing_Action_Taken__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was this campaign ever the result of routing Action?</inlineHelpText>
        <label>Routing Action Taken?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UTM_Original_Content__c</fullName>
        <description>The UTM Content field copied from Load/Contact entity on time when Campaign Member object creation.</description>
        <label>UTM Original Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Open_Pipeline__c</fullName>
        <formula>If(IsBlank( LeadId ), (Contact.Account.Open_Pipeline__c ) , (Lead.LeanData__Reporting_Matched_Account__r.Open_Pipeline__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Open Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UTM_Original_Campaign__c</fullName>
        <description>The UTM Campaign field copied from Lead/Contract in time of Campaign Member creation.</description>
        <label>UTM Original Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routed_Date_Formula__c</fullName>
        <formula>IF(IsBlank( Lead.Id ),  Contact.LD_Routing_Date__c ,  Lead.LD_Routing_Date__c )</formula>
        <label>LD Routed Date-Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Routing_Status_Initial__c</fullName>
        <inlineHelpText>Routing Status Stamp based on Routing Status Formula</inlineHelpText>
        <label>Routing Status - Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routed_to_Sales_Date__c</fullName>
        <label>LD Routed to Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Company_Lifecycle__c</fullName>
        <formula>Case( Contact.Top_Project_Role__c,
&quot;admin&quot;,&quot;1.0 Customer-maker&quot;,
&quot;editor&quot;,&quot;1.0 Customer-maker&quot;,
&quot;contributor&quot;,&quot;1.0 Customer-view/contrib&quot;,
&quot;viewer&quot;,&quot;1.0 Customer-view/contrib&quot;,


IF( ISblank(Lead.Id ),Contact.Account.Customer_Status__c,
Lead.LeanData__Reporting_Matched_Account__r.Customer_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contact/Lead matched account customer status</inlineHelpText>
        <label>Member Company Lifecycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routing_Status_Formula__c</fullName>
        <formula>IF( IsBLank(LD_Routing_Status__c ),
IF( Is_Latest_Campaign__c ,
IF( ISblank( LD_Routed_Date_Formula__c ), 
IF(ISblank( LD_Routing_Action_on_Lead_Contact__c ),
Text(Lead.Status_Reason__c) &amp; Text( Contact.Status_Reason__c ), &quot;Error or Still Routing&quot;),

&quot;Routed to Sales&quot;
),
IF( today() - FirstRespondedDate &gt; 0,&quot;NOT LAST CAMPAIGN&quot;,&quot;&quot;)),LD_Routing_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LD Routing Status-Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Logged_After_Response__c</fullName>
        <formula>IF(IsBlank( Last_Activity__c ),true,false)</formula>
        <label>Activity Logged After Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LD_Routing_Action_Completed_Date__c</fullName>
        <inlineHelpText>Indicates if the routing was initiated, the routing completion date</inlineHelpText>
        <label>LS - MEL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LD_Routing_Action_on_Lead_Contact__c</fullName>
        <formula>Lead.LD_Routing_Action__c &amp;  Contact.LD_Routing_Action__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LD Routing Action on Lead/Contact</label>
        <type>Text</type>
    </fields>
</CustomObject>